# aaagent

./: a.py  graph.py  ingest.py  main.py  pyproject.toml  requirements.txt
vector_store/: chroma.sqlite3
